# FWLedMatrixLib

./: CMakeLists.txt  README.md  fw_led_matrix.cpp  fw_led_matrix.h
internal/: magic.h  serial_linux.h  serial_windows.h
test/: test.cpp
